fixed contrast errors

--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ nav {
 
 nav a {
   text-decoration: none;
-  color: #121212;
+  color: white;
   /* border: 1px solid pink; */
   font-size: larger;
 }
